[package]
name = "injective-rs"
version = "0.1.0"
authors = ["adairrr <32375605+adairrr@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tonic = { version = "0.8.3" }
#prost = "0.11.6"

[build-dependencies]
prost = "0.11"
prost-build = "0.11"
tonic = "0.8"
tonic-build = "0.8"
regex = "1"
walkdir = "2"